# llm-clip

./: README.md  llm_clip.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: conftest.py  test_clip.py
